--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/react": "^6.19.7",
+    "@sentry/tracing": "^6.19.7",
     "axios": "^0.27.2",
     "bootstrap": "^4.1.2",
+    "raven-js": "^3.27.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
